@@ -1,21 +1,6 @@
-FROM openjdk:17-jdk as base
-WORKDIR /app
- 
-COPY .mvn/ .mvn
-COPY mvnw pom.xml ./
-RUN chmod +x mvnw
-RUN ./mvnw dependency:go-offline
-COPY src ./src
- 
-#FROM base as test
-#RUN ["./mvnw", "test"]
- 
-FROM base as build
-RUN ["./mvnw", "package"]
- 
+FROM openjdk:16-jdk
+#RUN addgroup --system spring && adduser --system spring -ingroup spring
 #USER spring:spring
 #ARG JAR_FILE=target/*.jar
- 
-#ADD ${JAR_FILE} app.jar
- 
-ENTRYPOINT ["java","-jar","--enable-preview", "-Dspring.profiles.active=ocidevops","target/SpringBootRabbitMQHelloWorld-0.0.1-SNAPSHOT.jar"]
+COPY SpringBootRabbitMQHelloWorld-0.0.1-SNAPSHOT.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
